:meat_on_bone: I think @EdwinGuzman is a designer in his spare time. - Fixed minor layout issue w/ label alignments

--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -418,6 +418,7 @@ $form-padding: 0.5rem;
     line-height: 1.2;
     position: relative;
     padding-left: 1.75rem;
+    padding-top: 0.25rem;
     width: 60%;
 
     // @include media($xtrasmall-breakpoint) {
